# StrawberryCpp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  Strawberry.g4  strawberry.g4
Strawberry/: CMakeLists.txt  LexerLiteralsInParser.pl  README.md  ReturnType.pl  SetReturnType.pl  StrawberryLexer.g4  StrawberryLexer.tokens  StrawberryParser.g4  StrawberryParserWithLexers.g4  TLexer.g4  TParser.g4  generate.cmd  generate.sh  test.sb
Strawberry/Cpp/: StrawberryAllocator.cpp  StrawberryAllocator.h  StrawberryInterpreter.cpp  StrawberryInterpreter.h  StrawberryManager.cpp  StrawberryManager.h  StrawberryPredicateParser.cpp  StrawberryPredicateParser.h  StrawberryTree.cpp  StrawberryTree.h  StrawberryVisitor.cpp  StrawberryVisitor.h  Value.cpp  Value.h  main.cpp
Strawberry/Cpp/functions/: FunctionHandle.cpp  FunctionHandle.h
Strawberry/Cpp/types/: CastHandler.cpp  CastHandler.h  Reference.h  Value.cpp  Value.h
Strawberry/Cpp/types/containers/: Container.h  Hash.cpp  Hash.h  List.cpp  List.h  Pair.cpp  Pair.h
Strawberry/Cpp/types/expressions/: Bool.cpp  Bool.h  Number.cpp  Number.h  String.cpp  String.h
Strawberry/Cpp/types/nonexpressions/: Container.h  Hash.cpp  Hash.h  Lambda.cpp  Lambda.h  List.cpp  List.h  Pair.cpp  Pair.h  ValueRef.cpp  ValueRef.h
Strawberry/Cpp/util/: Warnings.cpp  Warnings.h
Strawberry/Scripts/: LexerLiteralsInParser.pl  SetReturnType.pl  SplitGrammar.pl
cmake/: Antlr4Package.md  README.md
doc/: compound_statements.md  containers.md
runtime/: README.md
strawberry/: CMakeLists.txt  StrawberryLexer.g4  StrawberryLexer.tokens  StrawberryParser.g4  StrawberryParserWithLexers.g4  generate.sh  test.sb
strawberry/cpp/: StrawberryInterpreter.cpp  StrawberryInterpreter.h  StrawberryManager.cpp  StrawberryManager.h  StrawberryPredicateParser.cpp  main.cpp
strawberry/cpp/interpreter/: SbManager.cpp  SbManager.h  StrawberryInterpreter.cpp  StrawberryInterpreter.h
strawberry/cpp/types/: Reference.cpp  StrawberryTypes.cpp  StrawberryTypes.h  Value.cpp  Value.h
strawberry/cpp/types/containers/: Container.cpp  List.cpp  List.h  Matrix.cpp  Matrix.h  Pair.cpp
strawberry/cpp/types/expressions/: Number.cpp  Number.h
strawberry/cpp/types/expressions/numbers/: AbstractNumber.cpp  AbstractNumber.h  Int.cpp  Int.h  Number.cpp  Number.h
strawberry/cpp/types/nonexpressions/: Lambda.h
strawberry/cpp/util/: Options.cpp  Options.h  Warnings.cpp  Warnings.h
strawberry/scripts/: LexerLiteralsInParser.pl  SetReturnType.pl
test/Python/: Test1.py
test/Strawberry/: Test1.sb
